# BattleArena

./: .gitignore  Battle.drawio  CMakeLists.txt  README.md  names.txt
BattleArena/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Downloads/practise/: Projectile.cpp  Projectile.hpp
OneDrive/Documents/LoginTest/: CMakeLists.txt  chat_server.cpp  main.cpp
assets/: resources.qrc
games/: savegame.txt
gui/: Character.cpp  Character.h  CharacterScreen.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  Obstacle.cpp  Obstacle.h  Projectile.cpp  Projectile.h  Scoreboard.cpp  Scoreboard.h  StartScreen.cpp  StartScreen.h  game.cpp  game.h  main.cpp
include/: Archer.h  Character.h  Mage.h  Warrior.h
src/: Archer.cpp  Character.cpp  Mage.cpp  Warrior.cpp  main.cpp
