cmake_minimum_required(VERSION 3.16)

project(LoginTest VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appLoginTest
    main.cpp
)

qt_add_qml_module(appLoginTest
    URI LoginTest
    QML_FILES
        Main.qml
)

set_target_properties(appLoginTest PROPERTIES
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE FALSE
)

target_include_directories(appLoginTest PRIVATE
    "C:/msys64/mingw64/include"
    "${CMAKE_CURRENT_SOURCE_DIR}"
)

target_link_libraries(appLoginTest
    PRIVATE
    Qt6::Quick
    ws2_32
)

include(GNUInstallDirs)
install(TARGETS appLoginTest
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
